--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,11 +1,11 @@
 ---
 name: Checks
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   test-lint:
-    name: Test and lint
+    name: Test and Lint
     runs-on: ubuntu-20.04
     steps: 
       - name: Login to Docker Hub
