--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -21,6 +21,6 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
           sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose  
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py wait_db && python manage.py test"
-      - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
+        run: docker-compose run --rm app sh - c "python manage.py wait_db && python manage.py test"
+      # - name: Lint
+      #   run: docker-compose run --rm app sh -c "flake8"
